# zcore-midi-fs

./: .gitignore  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  RELEASE_NOTES.md  build.cmd  build.proj  paket.dependencies  zmidi-fs-core.sln
.github/workflows/: dotnetcore.yml
ci/: Directory.Build.props  build.proj
demo/: MidiCopy.fsx  scratch.fsx  writer.fsx
src/ZMidi/: DataTypes.fs  ExtraTypes.fs  Isomorphisms.fs  Read.fs  Write.fs  paket.references  zmidi-fs-core.fsproj
src/ZMidi/Internal/: ParserMonad.fs  Utils.fs  WriterMonad.fs
test/tests/: Tests.fs  paket.references  tests.fsproj
tests/rust/readmidi/: Cargo.toml
tests/rust/readmidi/src/: main.rs
tests/zmidi-fs-core.Benchmarks/: Program.fs  paket.references  zmidi-fs-core.Benchmarks.fsproj
tests/zmidi-fs-core.Tests/: ExpectedFailures.fs  Infrastructure.fs  Tests.fs  paket.references  zmidi-fs-core.Tests.fsproj
